--- a/serenity.properties
+++ b/serenity.properties
@@ -1,1 +1,5 @@
 serenity.project.name=Serenity and Cucumber Quick Start
+webdriver.base.url=https://vi.wikipedia.org
+serenity.restart.browser.for.each=scenario
+use.unique.browser = false
+restart.browser.each.scenario = true
