--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,21 +1,75 @@
 serenity {
   take.screenshots = AFTER_EACH_STEP
-   webdriver {
-          timeout = 30s
-      }
+  webdriver {
+    timeout = 30s
+  }
 }
+
 headless.mode = false
 
 webdriver {
-  driver = chrome
-  capabilities {
-    browserName = chrome
-    acceptInsecureCerts = true
-    "goog:chromeOptions" {
-      args = ["remote-allow-origins=*", "test-type", "no-sandbox", "ignore-certificate-errors",
-              "--start-maximized", "incognito", "disable-infobars", "disable-gpu",
-              "disable-default-apps", "disable-popup-blocking", "disable-dev-shm-usage",
-              "disable-extensions", "disable-web-security", "disable-translate", "disable-logging"]
+  chrome {
+    driver = chrome
+    capabilities {
+      browserName = chrome
+      acceptInsecureCerts = true
+      "goog:chromeOptions" {
+        args = ["remote-allow-origins=*", "test-type", "no-sandbox", "ignore-certificate-errors",
+                "--start-maximized", "incognito", "disable-infobars", "disable-gpu",
+                "disable-default-apps", "disable-popup-blocking", "disable-dev-shm-usage",
+                "disable-extensions", "disable-web-security", "disable-translate", "disable-logging"]
+      }
     }
+  }
+
+  firefox {
+      webdriver {
+        capabilities {
+          browserName = "firefox"
+          pageLoadStrategy = "normal"
+          acceptInsecureCerts = true
+          unhandledPromptBehavior = "dismiss"
+          strictFileInteractability = true
+
+          "moz:firefoxOptions" {
+            args = ["-headless"],
+            prefs {
+              "javascript.options.showInConsole": false
+            },
+            log {"level": "info"},
+          }
+        }
+      }
+    }
+
+  edge {
+    driver = edge
+    capabilities {
+      browserName = edge
+      acceptInsecureCerts = true
+      "ms:edgeOptions" {
+        args = ["--start-maximized", "--inprivate", "disable-popup-blocking", "disable-extensions"]
+      }
+    }
+  }
+}
+
+environments {
+  default {
+    webdriver.base.url = "https://vi.wikipedia.org"
+  }
+  dev {
+    webdriver.base.url = "https://vi.wikipedia.org/dev"
+  }
+  staging {
+    webdriver.base.url = "https://vi.wikipedia.org/staging"
+  }
+  prod {
+    webdriver.base.url = "https://vi.wikipedia.org/prod"
+  }
+  all {
+    home.page = "#{webdriver.base.url}/wiki/Trang_Chính-NGuyen-Tri-Dien"
+    config.page = "#{webdriver.base.url}/myapp"
+    accounts.page = "#{accounts.service.url}/myapp"
   }
 }
