--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,59 +1,9 @@
 serenity {
-  take.screenshots = AFTER_EACH_STEP
-  webdriver {
-    timeout = 30s
-  }
+    take.screenshots = FOR_FAILURES
 }
 
 headless.mode = false
-
-webdriver {
-  chrome {
-    driver = chrome
-    capabilities {
-      browserName = chrome
-      acceptInsecureCerts = true
-      "goog:chromeOptions" {
-        args = ["remote-allow-origins=*", "test-type", "no-sandbox", "ignore-certificate-errors",
-                "--start-maximized", "incognito", "disable-infobars", "disable-gpu",
-                "disable-default-apps", "disable-popup-blocking", "disable-dev-shm-usage",
-                "disable-extensions", "disable-web-security", "disable-translate", "disable-logging"]
-      }
-    }
-  }
-
-  firefox {
-      webdriver {
-        capabilities {
-          browserName = "firefox"
-          pageLoadStrategy = "normal"
-          acceptInsecureCerts = true
-          unhandledPromptBehavior = "dismiss"
-          strictFileInteractability = true
-
-          "moz:firefoxOptions" {
-            args = ["-headless"],
-            prefs {
-              "javascript.options.showInConsole": false
-            },
-            log {"level": "info"},
-          }
-        }
-      }
-    }
-
-  edge {
-    driver = edge
-    capabilities {
-      browserName = edge
-      acceptInsecureCerts = true
-      "ms:edgeOptions" {
-        args = ["--start-maximized", "--inprivate", "disable-popup-blocking", "disable-extensions"]
-      }
-    }
-  }
-}
-
+maximized.mode = true
 environments {
   default {
     webdriver.base.url = "https://vi.wikipedia.org"
@@ -68,8 +18,73 @@ environments {
     webdriver.base.url = "https://vi.wikipedia.org/prod"
   }
   all {
-    home.page = "#{webdriver.base.url}/wiki/Trang_Chính-NGuyen-Tri-Dien"
+    home.page = "#{webdriver.base.url}"
     config.page = "#{webdriver.base.url}/myapp"
     accounts.page = "#{accounts.service.url}/myapp"
+  }
+  chrome {
+    webdriver {
+      driver = chrome
+      autodownload = true
+      capabilities {
+        browserName = "chrome"
+        acceptInsecureCerts = true
+        "goog:chromeOptions" {
+          args = [
+            "test-type",
+            "ignore-certificate-errors",
+            "incognito",
+            "disable-infobars",
+            "disable-gpu",
+            "disable-default-apps",
+            "disable-popup-blocking",
+            "start-maximized"
+          ]
+        }
+      }
+    }
+  }
+  edge {
+    webdriver {
+      capabilities {
+        browserName = "MicrosoftEdge"
+        "ms:edgeOptions" {
+          args = [
+            "start-maximized", // Thay đổi nếu cần để tối đa hóa cửa sổ
+            "test-type",
+            "ignore-certificate-errors",
+            "headless",
+            "incognito",
+            "disable-infobars",
+            "disable-gpu",
+            "disable-default-apps",
+            "disable-popup-blocking"
+          ]
+        }
+      }
+    }
+  }
+  firefox {
+    webdriver {
+      capabilities {
+        browserName = "firefox"
+        pageLoadStrategy = "normal"
+        acceptInsecureCerts = true
+        unhandledPromptBehavior = "dismiss"
+        strictFileInteractability = true
+
+        "moz:firefoxOptions" {
+          args = [
+            "--start-maximized"
+          ]
+          prefs {
+            "javascript.options.showInConsole": false
+          }
+          log {
+            level = "info"
+          }
+        }
+      }
+    }
   }
 }
